syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

message Message {

    enum Status {
        NA                         = 0;
        SUCCESS                    = 100;
        ALREADY_AUTHENTICATED      = 210;
        PUBKEY_INVALID             = 250;
        SIGNATURE_INVALID          = 251;
        PEERID_INVALID             = 252;
        NOT_REGISTERED             = 305;
        MALFORMED_MESSAGE          = 400;
        UNAUTHORIZED               = 401;
    }

    enum Type {
        STATUS             = 0;
        AUTHENTICATE       = 1;
        CHALLENGE          = 2;
        RESPONSE           = 3;
        REGISTER           = 5;
        UNREGISTER         = 6;
        PROVE_REGISTRATION = 7;
        STORE_MESSAGE      = 8;
        GET_MESSAGE        = 9;
        GET_MESSAGES       = 10;
        MESSAGE            = 11;
        MESSAGE_ACK        = 12;
        REPLICATE          = 13;
    }

    message Pubkey {
        bytes pubkey = 1;
    }

    message Registration {
        google.protobuf.Timestamp expiry = 1;
        bytes pubkey                     = 2;
        bytes server                     = 3;
        bytes signature                  = 4;
    }

    message Challenge {
        bytes challenge = 1;
    }

    message Signature {
        bytes signature = 1;
    }

    message EncryptedMessage {
        bytes peerID  = 1;
        bytes messageID = 2;
        bytes message   = 3;
        bool more       = 4;
    }

    message Ack {
        bytes messageID = 1;
    }

    message IDs {
        bytes messageID = 1;
        bytes peerID    = 2;
    }

    Type type = 1;     // Type of the message

    oneof payload {
        Pubkey pubkey                     = 2;
        Registration registration         = 3;
        Challenge challenge               = 4;
        Signature signature               = 5;
        EncryptedMessage encryptedMessage = 6;
        Ack ack                           = 7;
        IDs ids                           = 8;
    }

    Status code = 9;   // Status code.
}